       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.11 (v2_1_11) on Linux (lb32001) on 9/30/2008 ==

2008-09-30  Brian Kahne  <bkahne@freescale.com>

	* Added a dependencies file for /pkg.

       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.10 (v2_1_10) on Linux (ld2058) on 9/4/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.10 (v2_1_10) on Linux (lb32001) on 9/4/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.10 (v2_1_10) on Linux (ld2058) on 9/4/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.10 (v2_1_10) on Linux (lb32001) on 2/26/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.10 (v2_1_10) on Linux (lb32001) on 2/26/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.10 (v2_1_10) on Linux (ld2058) on 2/26/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.10 (v2_1_10) on Linux (ld2058) on 2/26/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.10 (v2_1_10) on Linux (lb0172) on 2/26/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.10 (v2_1_10) on Linux (lb32001) on 9/17/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.10 (v2_1_10) on Linux (lb0170) on 9/17/2007 ==

2007-09-17  Brian Kahne  <bkahne@freescale.com>

	* include/RNumber.h: Fixed a bug within uint64().  We were always
	assuming that _wordCount was >= 2, even if it wasn't, leading to
	indexing element -1 of valueBuffer.  Fixed this by checking
	_wordCount and calling uint32() if the RNumber was <= 32 bits in
	width.

2007-06-08  Todd Dukes  <tdukes@freescale.com>

	* removed check for gnumake. We start by looking for gmake now.

2007-05-21  Todd Dukes-TDUKES  <tdukes@freescale.com>

	* fixed error in bl-rnumber.init.in - I was setting *cc-options*
	  to a modified version of *cflags*. I should have been modifying
	  *cc-options*
	  
2007-05-17  Brian Kahne  <bkahne@freescale.com>