@@ -1,6 +1,8 @@
-       == file:///proj/.ppc_43/vc_noec/svn/rnumber release 2.1.11 (v2_1_11) on Linux (lb32001) on 9/30/2008 ==
-
 2008-09-30  Brian Kahne  <bkahne@freescale.com>
+
+	* Fixed a swig problem with Perl: Our makefile rules were wrong,
+	resulting in a corrupt RNumber.pm file due to how swig generates
+	files.  Fixed this issue.
 
 	* Added a dependencies file for /pkg.
 
